--- a/index.html
+++ b/index.html
@@ -2,12 +2,24 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <script src="/scripts/jquery.3.5.1.min.js"></script>
-  <script src="/scripts/client.js"></script>
+  <script src="scripts/jquery.3.5.1.min.js"></script>
+  <script src="scripts/client.js"></script>
+  <link rel="stylesheet" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Employee Database</title>
 </head>
 <body>
-  
+  <h3>Totals:</h3>
+  <table>
+    <thead>
+      <td>First Name</td>
+      <td>Last Name</td>
+      <td>ID Number</td>
+      <td>Job Title</td>
+      <td>Annual Salary</td>
+    </thead>
+  </table>
 </body>
 </html>
+
+<!--employee first name, last name, ID number, job title, annual salary-->
