minor progress, rearranged things on index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
   <title>Employee Database</title>
 </head>
 <body>
-  <h3>Totals:</h3>
+  <h3>Add Employee:</h3>
+  <label for="fullNameIn">Enter Full Name:</label>
+  <input type="text" placeholder="Enter full name" id="fullNameIn"></input><br>
+  <label for="IDIn">Enter ID Number:</label>
+  <input type="number" placeholder="Enter ID Number name" id="IDIn"></input><br>
+  <label for="jobTitleIn">Enter Job Title:</label>
+  <input type="text" placeholder="Enter job title" id="jobTitleIn"></input><br>
+  <label for="annualSalaryIn">Enter Annual Salary</label>
+  <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input><br>
+  <button id="enterButton">Enter</button>
   <table>
     <thead>
       <td>First Name</td>
@@ -18,6 +27,15 @@
       <td>Job Title</td>
       <td>Annual Salary</td>
     </thead>
+    <tr id="1234row">
+      <td>Jonny</td>
+      <td>Arbuckle</td>
+      <td>1234</td>
+      <td>Zookeeper</td>
+      <td>$3500</td>
+      <td><button class="removeButton" id="1234button">Remove</button></td>
+    </tr>
+    <tr id="tableFooter"></tr>
   </table>
 </body>
 </html>
