--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
 
 <body>
   <h3>Add Employee:</h3>
-  <label for="fullNameIn">Enter Full Name:</label>
-  <input type="text" placeholder="Enter full name" id="fullNameIn"></input><br>
-  <label for="IDIn">Enter ID Number:</label>
-  <input type="number" placeholder="Enter ID Number name" id="IDIn"></input><br>
-  <label for="jobTitleIn">Enter Job Title:</label>
-  <input type="text" placeholder="Enter job title" id="jobTitleIn"></input><br>
-  <label for="annualSalaryIn">Enter Annual Salary</label>
-  <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input><br>
+  <input type="text" placeholder="Enter full name" id="fullNameIn"></input>
+  <input type="number" placeholder="Enter ID Number name" id="IDIn"></input>
+  <input type="text" placeholder="Enter job title" id="jobTitleIn"></input>
+  <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
   <button id="enterButton">Enter</button>
   
   <table>
