--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <input type="text" placeholder="Enter job title" id="jobTitleIn"></input>
   <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
   <button id="enterButton">Enter</button>
-  
+  <br/><br>
   <table>
     <thead>
       <td>First Name</td>
@@ -25,16 +25,22 @@
       <td>Job Title</td>
       <td>Annual Salary</td>
     </thead>
-    <tr id="1234row">
-      <td>Jonny</td>
-      <td>Arbuckle</td>
-      <td>1234</td>
-      <td>Zookeeper</td>
-      <td>$3,500.00</td>
-      <td><button class="removeButton" id="1234button">Remove</button></td>
-    </tr>
-    <tr id="tableFooter"></tr>
+    <tbody><!--
+      <tr id="1234row">
+        <td>Jonny</td>
+        <td>Arbuckle</td>
+        <td>1234</td>
+        <td>Zookeeper</td>
+        <td>$3,500.00</td>
+        <td><button class="removeButton" id="1234button">Remove</button></td>
+      </tr>-->
+    </tbody>
+    <tfoot>
+      <tr id="tableFooter"></tr>
+    </tfoot>
   </table>
+
+  <div id="monthlyTotalContainer">Monthly Total<div id="monthlyTotal"></div></div>
 </body>
 </html>
 
