Fixed bug with the monthly budget calculation

--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 
 <body>
   <h3>Add Employee:</h3>
-  <input type="text" placeholder="Enter full name" id="fullNameIn"></input>
-  <input type="number" placeholder="Enter ID Number name" id="IDIn"></input>
-  <input type="text" placeholder="Enter job title" id="jobTitleIn"></input>
-  <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
-  <button id="enterButton">Enter</button>
+  <form>
+    <input type="text" placeholder="Enter full name" id="fullNameIn"></input>
+    <input type="number" placeholder="Enter ID Number name" id="IDIn"></input>
+    <input type="text" placeholder="Enter job title" id="jobTitleIn"></input>
+    <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
+    <button id="enterButton">Enter</button>
+  </form>
   <br/><br>
   <table>
     <thead>
