--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <td>ID Number</td>
       <td>Job Title</td>
       <td>Annual Salary</td>
+      <td></td>
     </thead>
     <tbody><!--
       <tr id="1234row">
@@ -36,9 +37,17 @@
         <td>$3,500.00</td>
         <td><button class="removeButton" id="1234button">Remove</button></td>
       </tr>-->
+      </tr>
     </tbody>
     <tfoot>
-      <tr id="tableFooter"></tr>
+      <tr>
+        <td id="leftFoot"></td>
+        <td></td>
+        <td></td>  
+        <td></td>
+        <td></td>
+        <td id="rightFoot"></td>
+      </tr>
     </tfoot>
   </table>
 
@@ -47,3 +56,4 @@
 </html>
 
 <!--employee first name, last name, ID number, job title, annual salary-->
+<!--from css: border-collapse: collapse;-->
