--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
 
 <body>
   <h3>Add Employee:</h3>
-  <form>
+  <!--<form>-->
     <input type="text" placeholder="Enter full name" id="fullNameIn"></input>
     <input type="number" placeholder="Enter ID Number name" id="IDIn"></input>
     <input type="text" placeholder="Enter job title" id="jobTitleIn"></input>
     <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
     <button id="enterButton">Enter</button>
-  </form>
+  <!--</form>-->
   <br/><br>
   <table>
     <thead>
@@ -28,16 +28,7 @@
       <td>Annual Salary</td>
       <td></td>
     </thead>
-    <tbody><!--
-      <tr id="1234row">
-        <td>Jonny</td>
-        <td>Arbuckle</td>
-        <td>1234</td>
-        <td>Zookeeper</td>
-        <td>$3,500.00</td>
-        <td><button class="removeButton" id="1234button">Remove</button></td>
-      </tr>-->
-      </tr>
+    <tbody>
     </tbody>
     <tfoot>
       <tr>
