--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     <input type="number" placeholder="Enter annual salary" id="annualSalaryIn"></input>
     <button id="enterButton">Enter</button>
   <!--</form>-->
-  <br/><br>
+  <div id="errorMessage"></div>
+  <br>
   <table>
     <thead>
       <td>First Name</td>
